# outline_toot_backend

./: README.md  mappings.json  pyproject.toml  query_builder.py  requirements.txt
api/: config.py  main.py  models.py
api/routers/: data_import.py  volumes.py  works.py
api/services/: catalog_import.py  catalog_propagation.py  ocr_import.py  opensearch.py  os_client.py  records.py  volumes.py
bdrc_data/: gv_versions_cache.json
doc/: README_OSmin_hash.md  bdrc_sync_workflow.md  dedup_methods.md  dedup_methods_results.md  mappings_bec_changes.json  mappings_bec_texts.json  mappings_bec_texts_minhash_3.json  segments_import_from_outline.md  works_persons_operations.md
scripts/: fix_disk_block.py  import_nlm.py  mark_batch.py  sync_texts.py
scripts/dedup/: benchmark.py
